flapivor/tests/m1/hopix/parser/bad/78-application-2.hopix
val compose = { ((id (id)) (id (id))) (id) }